# learner

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/azuraforge_learner/: __init__.py  caching.py  callbacks.py  events.py  layers.py  learner.py  losses.py  models.py  optimizers.py  pipelines.py  reporting.py  utils.py
src/azuraforge_learner/layers/: __init__.py  activations.py  base.py  conv.py  dropout.py  embedding.py  linear.py  lstm.py  reshaping.py
src/azuraforge_learner/losses/: __init__.py  base.py  cross_entropy.py  mse.py
src/azuraforge_learner/optimizers/: __init__.py  adam.py  base.py  sgd.py
src/azuraforge_learner/pipelines/: __init__.py  audio_generation.py  base.py  image_classification.py  timeseries.py
tests/azuraforge_learner/: test_learner_components.py  test_pipelines.py
