# learner/pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"] # 'wheel' eklendi
build-backend = "setuptools.build_meta"

[project]
name = "azuraforge-learner"
version = "0.1.5" # Bu versiyon otomatik artırılacak (şu anki en güncel fix'li versiyonumuz)
authors = [{ name = "Azmi Sahin" }]
description = "High-level deep learning library for model training and management, using the AzuraForge Core engine."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "azuraforge-core @ git+https://github.com/AzuraForge/core.git@v0.1.3", # core'un mevcut stabil versiyonuna işaret etmeli
    "scikit-learn",
    "numpy",
    "redis",
    "matplotlib",
    "pandas",
    "pyarrow",
    "python-semantic-release" # YENİ: Otomatik versiyonlama için eklendi
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

# YENİ: semantic-release yapılandırması
[tool.semantic_release]
branch = "main" # Sadece main branch'inde çalış
version_variable = "pyproject.toml:project.version" # pyproject.toml'daki versiyonu güncelle
upload_to_pypi = false # Şimdilik PyPI'ye yükleme yapmıyoruz
major_on_zero = false # 0.x.x versiyonlarında feat için major artırma
changelog_file = "CHANGELOG.md" # Değişiklik günlüğü oluştur (oluşturulacak)