# learner/pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azuraforge-learner"
version = "0.1.1"
authors = [{ name = "Azmi Sahin" }]
description = "High-level deep learning library for model training and management, using the AzuraForge Core engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "azuraforge-core @ git+https://github.com/AzuraForge/core.git@v0.1.0",
    "scikit-learn",
    "numpy",
    "redis",
    "matplotlib",
    "pandas",
    "pyarrow",
    "python-semantic-release"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.semantic_release]
branch = "main"
version_variable = "pyproject.toml:project.version"
upload_to_pypi = false
major_on_zero = false
changelog_file = "CHANGELOG.md"